<resources>
    <string name="app_name">Mobikit</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="next">next</string>
    <string name="next1">next1</string>
    <string name="title_activity_log_in">logIn</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_dismiss">Dismiss</string>
    <string name="title_activity_nav_bar">nav_bar</string>
    <string name="navigation_item_1">navigation_item_1</string>
    <string name="navigation_item_2">navigation_item_2</string>
    <string name="navigation_item_3">navigation_item_3</string>
    <string name="navigation_item_4">navigation_item_4</string>
    <string name="navigation_item_5">navigation_item_5</string>
    <string name="Samsung">Samsung</string>
    <string name="HTC">HTC</string>
    <string name="Apple">Apple</string>
    <string name="Micromax">Micromax</string>
    <string name="TopPhones">Top Phones</string>
    <string name="AndroidPhones">Android Phones</string>
    <string name="fourgphones">4G Phones</string>
    <string name="budgetphones">Budget Phones</string>
    <string name="DualSimPhones">Dual-Sim Phones</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_register">register</string>
    <string name="title_activity_drawer_header">drawer_header</string>
    <string name="title_activity_samsung">Samsung</string>
    <string name="title_activity_htc">HTC</string>
    <string name="title_activity_apple">Apple</string>
    <string name="title_activity_micromax">Micromax</string>
    <string name="title_activity_top_phones">TopPhones</string>
    <string name="title_activity_android_phones">AndroidPhones</string>
    <string name="title_activity_four_gphones">FourGphones</string>
    <string name="title_activity_budget_phones">BudgetPhones</string>
    <string name="title_activity_dual_sim_phones">DualSimPhones</string>
    <string name="title_activity_sggp4gg531f">sggp4gg531f</string>
    <string name="title_activity_htcdesire816_gdual_sim">HTCDesire816GDualSim</string>
    <string name="title_activity_applei_phone5s16_gb">AppleiPhone5s16GB</string>
    <string name="title_activity_maps1">Map</string>
    <string name="title_activity_no_connection">NoConnection</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_viewprofile">viewprofile</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_mobikit">Mobikit</string>
    <string name="title_activity_credits">credits</string>
    <string name="title_activity_you_tube">YouTube</string>
</resources>
