<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mobikit.mobikit.login.drawer_header">
<group
    android:id="@+id/group1"
    android:checkableBehavior="single">

    <item
        android:id="@+id/navigation_item_1"
        android:icon="@drawable/ic_action_samsung_foto_logo"
        android:title="@string/Samsung" />
    <item
        android:id="@+id/navigation_item_2"
        android:icon="@drawable/ic_action_htc_logo"
        android:title="@string/HTC" />
    <item
        android:id="@+id/navigation_item_3"
        android:icon="@drawable/ic_action_apple_logo_black"
        android:title="@string/Apple" />
    <item
        android:id="@+id/navigation_item_4"
        android:title="@string/Micromax" />
</group>

        <item
            android:id="@+id/navigation_item_5"
            android:title="@string/TopPhones" />
        <item
            android:id="@+id/navigation_item_6"
            android:title="@string/AndroidPhones" />

        <item
            android:id="@+id/navigation_item_8"
            android:title="@string/budgetphones" />
        <item
            android:id="@+id/navigation_item_9"
            android:title="@string/DualSimPhones" />

</menu>
